FIX - Full width bg image promo panel - better text spacing on mobile. stopped margin breaking

--- a/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
@@ -207,12 +207,16 @@ $promo-max-width:   60em;
                             max-width: 100%;
 
                             h1,
-                            h2 {
+                            h2,
+                            h3 {
+                                position: relative;
                                 font-size: 1.95em;
+                                margin-top: -1rem;
+                                margin-bottom: 0;
                             }
 
                             p {
-                                padding-top: 2.5em;
+                                padding-top: 0;
                             }
 
                             .button {
